[package]
name = "notify_test"
version = "0.1.0"
authors = ["Mohammad Javad Ghasemy <geeksesi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "3.3"

[target.'cfg(windows)'.dependencies]
winrt = {version = "0.5.0", features = ["windows-data", "windows-ui"]}